resolve the overlapping services containers and improve their layout.

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ section {
  section
  {
    min-height: 100vh;
-   padding: 10rem 9% 2rem;
+   padding: 6rem 9% 2rem;
  }
  .header
  {
@@ -620,7 +620,7 @@ span {
   flex-wrap: wrap;
   justify-content: center;
   font-family: "Inter", sans-serif;
-  padding: 30px;
+  padding: 4px;
 }
 
 .fcard {
@@ -632,7 +632,7 @@ span {
   background: linear-gradient(90deg, rgb(31, 102, 31), rgb(231, 231, 121));
   background: -webkit-linear-gradient(90deg, rgb(31, 102, 31), rgb(231, 231, 121));
   border-radius: 10px;
-  margin: 10px;
+  margin: 25px;;
   align-self: stretch;
   flex: 1 1 21%;
   opacity: 1; 
@@ -691,7 +691,7 @@ span {
   text-align: justify;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 50%;
 }
 
 a {
@@ -1509,4 +1509,6 @@ input[type="number"]::-webkit-inner-spin-button {
     flex-direction: column;
   }
 }
-
+.rel{
+  margin: 36px;
+}
